frontend/src/main/compnents/sections/footer/Footer.module.css
.container {
  height: 642px;
  width: 80%;
  /* height: auto; */
  margin: 0 auto;
  padding: 2rem 0;
}
.upper {
  margin-top: 10rem;
  display: flex;
  justify-content: space-between;
}
.logo__section {
  width: 560px;
}
.logoSide {
  display: flex;
  flex-direction: column;
  width: 560px;
  gap: 2rem;
}
.links__section {
  width: 50%;
  display: flex;
  justify-content: space-between;
}

.link__heading {
  font-family: "inter";
  font-size: 16px;
  font-weight: 600;
  color: #393a32;
}

.text {
  font-family: "inter";
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  color: #393a32;
}

.link {
  display: flex;
  font-family: "Inter";
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  color: black;
  text-decoration: none;
  gap: 14px;
}
.link__col {
  display: flex;
  flex-direction: column;
  gap: 24px;
}

.input_field {
  padding: 15px;
  width: 347px;
  height: 46px;
  border-radius: 8px;
  border: 2px solid #8a8886;
  font-family: "Inter";
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
}

.btn__subscribe {
  padding: 15px;
  width: 170px;
  height: 55px;
  background-color: white;
  border-radius: 8px;
  border: 2px solid #8a8886;
  font-family: "Inter";
  font-style: normal;
  font-weight: 600;
  font-size: 18px;
  color: #2667ff;
  margin-left: 2%;
}

.divider {
  margin-top: 5rem;
  background-color: #171ee0;
  width: 100%;
  height: 1px;
  margin-bottom: 5rem;
}
.lower__part {
  display: flex;
  justify-content: space-between;
}
.right {
  font-family: "Inter";
  font-weight: lighter;
  font-size: 9px;
  color: #40403e;

  line-height: 16px;
}
.lower__links {
  display: flex;
  gap: 25px;
}

@media screen and (max-width: 1100px) {
  .upper {
    flex-direction: column;
  }

  .logo__section {
    width: 100%;
    margin-bottom: 2rem;
  }
  .links__section {
    width: 100%;
  }
  .container {
    height: 842px;
    padding: 1rem 0;
  }
}

@media screen and (max-width: 768px) {
  .upper {
    flex-direction: column;
  }
  .logo__section {
    width: 100%;
    margin-bottom: 2rem;
  }
  .text {
    font-size: 10px;
    width: 100%;
  }
  .logoSide {
    display: flex;
    flex-direction: column;
    width: 100%;
    gap: 2rem;
  }
  .input_field {
    padding: 10px;
    width: 247px;
    height: 30px;
    border-radius: 5px;
    border: 2px solid #8a8886;
    font-family: "Inter";
    font-style: normal;
    font-weight: 400;
    font-size: 10px;
  }

  .btn__subscribe {
    padding: 7px;
    width: 100px;
    height: 30px;
    background-color: white;
    border-radius: 5px;
    font-size: 10px;
  }
  .input__div {
    display: flex;
    flex-direction: row;
  }
  .links__section {
    width: 100%;
  }
  .link__heading {
    font-family: "inter";
    font-size: 10px;
  }
  .link {
    font-weight: 200;
    font-size: 5px;

    gap: 10px;
  }
  .link__col {
    display: flex;
    flex-direction: column;
    gap: 10px;
  }
  .divider {
    margin-top: 2rem;
    margin-bottom: 2rem;
  }

  .lower__part {
    margin-bottom: 0rem;
  }
  .right {
    font-family: "Inter";
    font-weight: 200;
    font-size: 3px;
    color: #40403e;
    line-height: 10px;
  }
  .container {
    height: 642px;
    padding: 1rem 0;
  }
}

